I22 test result invalidate (#88)
* implemented invalidate method

* added route to invalidate

* added invalidate to swagger

* typo fix

* added authorization to route
