# backend/src/app/routers/simulationResult.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 import * as simulationResultController from '../controllers/simulationResult';
+import { authorization } from '../controllers/authorization'
 
 export const router:Router = Router({ mergeParams: true });
 
@@ -8,3 +9,5 @@ router.get('/:id', simulationResultController.show);
 router.post('/', simulationResultController.initialize);
 router.put('/:id', simulationResultController.update);
 router.delete('/:id', simulationResultController.destroy);
+router.use(authorization);
+router.put('/:id/invalidate', simulationResultController.invalidate);
